# yoink-stats

./: .gitignore  README.md  justfile  pyproject.toml
frontend/: manifest.tsx
frontend/src/api/: import.ts  index.ts  me.ts  stats.ts  threads.ts
frontend/src/pages/import/: index.tsx
frontend/src/pages/stats/: GroupPage.tsx  IndexPage.tsx  MePage.tsx  UserPage.tsx  group.tsx  index.tsx  me.tsx  user.tsx
frontend/src/pages/stats/components/: MembersTab.tsx  UserStatsDrawer.tsx  index.ts
frontend/src/types/: index.ts
src/yoink_stats/: __init__.py  config.py  plugin.py  standalone.py
src/yoink_stats/analytics/: __init__.py  _base.py  activity.py  charts.py  content.py  events.py  relations.py  runner.py  users.py
src/yoink_stats/api/: router.py  schemas.py
src/yoink_stats/api/routers/: _deps.py  analytics.py  import_.py  members.py
src/yoink_stats/collector/: listener.py  user_tracker.py
src/yoink_stats/commands/: __init__.py  import_cmd.py  stats.py
src/yoink_stats/i18n/locales/: en.yml  ru.yml
src/yoink_stats/importer/: json_dump.py
src/yoink_stats/queries/: activity_by_day.sql  activity_by_month.sql  activity_by_week.sql  avg_message_length.sql  daily_activity.sql  ecdf.sql  history.sql  media_trend.sql  member_events.sql  members.sql  mention_stats.sql  response_time_overall.sql  response_time_users.sql  title_history.sql  top_emoji.sql  top_reaction_givers.sql  top_users.sql  user_latest_name.sql  user_stats_reactions.sql  user_stats_summary.sql  user_stats_top_type.sql  words.sql
src/yoink_stats/storage/: models.py  repos.py
