[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yoink-stats"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "yoink-core>=0.1.0",
    "sqlalchemy[asyncio]>=2.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
yoink-stats = "yoink_stats.standalone:main"
yoink-stats-import = "yoink_stats.importer.json_dump:main"

[project.entry-points."yoink.plugins"]
stats = "yoink_stats:StatsPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
